fix: height of mainContainer and scrollbar

--- a/src/pages/Landing/styles.scss
+++ b/src/pages/Landing/styles.scss
@@ -1,6 +1,7 @@
 .pageWrapper{
   width: 100%;
   height: calc(100vh - 80px);
+  overflow-y: auto;
 
   display: flex;
   justify-content: center;
@@ -10,7 +11,9 @@
 
 .mainContainer{
   width: 100%;
-  max-width: 1120px;
+  max-width: 1180px;
+
+  height: fit-content;
 
   padding: 2.4rem;
   
@@ -32,6 +35,68 @@
       font-size: 1.2rem;
       font-weight: 700;
       color: var(--title);
+    }
+  }
+}
+
+.topCards{
+  display: flex;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
+  gap: 1rem;
+  
+  margin-top: 1.2rem;
+  
+ > div{
+  width: 100%;
+  max-width: 205px;
+  height: 150px;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+
+  // background: chartreuse;
+
+  h3{
+    color: var(--text);
+  }
+
+  strong{
+    color: var(--title);
+  }
+
+ }
+}
+
+.bottomCards{
+  width: 100%;
+  height: fit-content;
+
+  margin-top: 3rem;
+  
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
+
+  > div{
+    padding: 1rem;
+
+    // background: red;
+
+    width: fit-content;
+    height: 100%;
+    max-height: 235px;
+
+    
+    strong{
+      color: var(--title);
+    }
+    
+    h4{
+      color: var(--text);
     }
   }
 }
